Menu and About Us

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Permanent+Marker&family=Rock+Salt&display=swap" rel="stylesheet">
 
     <title>Steelhead</title>
 </head>
@@ -24,9 +23,9 @@
 
     <header class="jumbotron jumbotron-fluid">
         <div class= "container" id="imgContainer">
-            <div class = "row row-content align-items-center">
-                <div class="col">
-                <img  src="img/steelhead.png" class=" mx-auto d-block img-fluid" alt="Steelhead logo"/>
+            <div class = "row row-content">
+                <div class="col align-self-center">
+                <a href="index.html"><img  src="img/steelhead.png" class="mx-auto d-block img-fluid" alt="Steelhead logo"/></a>
                 </div>
             </div>
         </div>
@@ -143,22 +142,22 @@
     </div>
 
 
-       <div class="container"> 
+       <div class="container" id="bodyContainer"> 
             <div class="row row-content justify-content-start">
-                <div class="col-6" id="colInfo">
+                <div class="col-md-6" id="colInfo">
                     <h2 class="text-center">The Vision</h2>
                     <p class="text-center">Steelhead is here to provide the best customer service and quality food. Every customer will leave satisfied and happy.</p>
                 </div>
             </div>
             <div class="row row-content justify-content-end">
-                    <div class="col-6" id="colInfo">
+                    <div class="col-md-6" id="colInfo">
                         <h2 class="text-center">The Customer</h2>
-                        <p class="text-center">Steelhead is here to provide the best customer service and quality food. Every customer will leave satisfied and happy.</p>
+                        <p class="text-center">Steelhead is customer obsessed. We believe word of mouth is the best form of advertising and we will do whatever it takes to have every customer leave smiling. </p>
                     </div>
             <div class="row row-content justify-content-start">
-                    <div class="col-6" id="colInfo">
+                    <div class="col-md-6" id="colInfo">
                         <h2 class="text-center">The Food</h2>
-                        <p class="text-center">Steelhead is here to provide the best customer service and quality food. Every customer will leave satisfied and happy.</p>
+                        <p class="text-center">Steelhead is all about using the freshest ingredients and a passion and love for cooking, to provide the customer with the best tasting meal money can buy.</p>
                     </div>
             </div>
         </div>
@@ -167,31 +166,29 @@
 
     
     <footer class = "site-footer border-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-2 offset-1">
-                <h5>Links</h5>
-                <ul class="list-unstyled">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="About Us.html">About</a></li>
-                    <li><a href="contactus.html">Contact</a></li>
-                </ul>
+            <div class="row align-self-center">
+                <div class="col-2 col-sm-2 offset-1">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="About Us.html">About</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-5 text-center">
+                    <h5>Social</h5>
+                        <a class="btn btn-social-icon" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                </div>
+                <div class = "col-sm-4 text-center">
+                        <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-702-545-1234</a><br />
+                        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> cs@steelhead.com</a>
+                </div>
             </div>
-            <div class="col-6 col-sm-5 text-center">
-                <h5>Social</h5>
-                    <a class="btn btn-social-icon" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                    <a class="btn btn-social-icon" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                    <a class="btn btn-social-icon" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                    <a class="btn btn-social-icon" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-            </div>
-            <div class = "col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-702-545-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> cs@steelhead.com</a>
-            </div>
-        </div>
-    </div>
-    </footer>
+        </footer>
 
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
