--- a/aboutus.html
+++ b/aboutus.html
@@ -40,9 +40,9 @@
             <div class="collapse navbar-collapse" id="steelheadNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html"> Home</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="menu.html"> Menu </a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"> About Us </a></li> 
-                    <li class="nav-item"><a class="nav-link" href="#"> Contact Us</a></li>   
+                    <li class="nav-item"><a class="nav-link" href="menu.html"> Menu </a></li>
+                    <li class="nav-item active"><a class="nav-link" href="aboutus.html"> About </a></li> 
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"> Contact </a></li>   
                 </ul>
             </div>
             <span class="navbar-text ml-auto">
