--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="index.html"> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="menu.html"> Menu </a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"> About Us </a></li> 
-                    <li class="nav-item"><a class="nav-link" href="#"> Contact Us</a></li>   
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"> About </a></li> 
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"> Contact </a></li> 
                 </ul>
             </div>
             <span class="navbar-text ml-auto">
