--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Permanent+Marker&family=Rock+Salt&display=swap" rel="stylesheet">
 
-    <title>Steelhead Menu</title>
+    <title>Contact Us</title>
 </head>
 
 <body>
