--- a/aboutus.html
+++ b/aboutus.html
@@ -120,20 +120,44 @@
     
 
     <!-- Information about the Company and the Owners -->
-       <div class="container"> 
-            <div class="row row-content justify-content-center">
-                <div class="col-10">
+       <div class="container">
+           <div class="row row content justify-content-center">
+                <div class="col">
                     <div class="card bg-light mt-3">
-                    <div class="card-header bg-dark text-light">
-                    <h2 class= "text-center"><strong>About Us</strong></h2>
-                    </div>
+                        <div class="card-header bg-dark text-light">
+                        <h2 class= "text-center"><strong>About Steelhead</strong></h2>
+                        </div>
                     <div class="card-body">
-                    <p class="border-bottom text-center">
-                        Gerado is a well established concept General Manager in the Las Vegas and Miami areas. He has a tried and proven track record of achieving and maintaining finical stability and success. His teams in all his locations give him raving reviews. From his hands-on approach, connections with team members and guests, and love for amazing service are unrivaled. Gerado is bilingual and in fact an avid hunter and fishermen. G is extremely family oriented and treats his teams as family as well. He has success in restaurants across the Valley including Café Americano at Caesars grossing around 30 million dollars per year. 
-                        Chef Joe and Gerardo have a brilliant relationship working together at Café Americano inside the Paris. Where both were introduced and given a failing restaurant Café Il St Louis and asked to re-brand “Café Americano”. Withing two years (including a 3 month covid shut down) the teams with the leadership of G and Joe have reached the pinnacle as operators. Operating at 20% cogs on average and maintaining Labor percentages far below budget, they have turned an old dying restaurant into a young, vibrant, and thriving café grossing nearly 15 million per year. 
-                        Joe has an immense background in corporate restaurants including Landrys, Red Robin, and Outback. He has also managed much smaller boutique bars/restaurants in the Las Vegas Valley. More recently as Executive Chef for Bar Code Burger Bar; Chef Joe implemented Burgers of the Month, standards for the  teams and growth, and winning Las Vegas Weekly undercover Burger of the Year. Joe has worked for the Café Americano umbrella company for nearly 4 years, and in doing so formed a strong bond with Gerardo. Trained in traditional Italian through Chef Emery Childress, Joe brings a wide variety of techniques, cuisines, and structure to any kitchen in his possession. 
-                        Communication, service standards, and food quality are mainly what these two thrive on. Their guests are rarely disappointed in service or food, and at STEELHEAD American Seafood & Steak we can expect the same. Hands-on approach to service, the team, and the guests experiences will keep STEELHEAD growing for years to come. 
-                    </p>
+                        <p class="border-bottom text-center">
+                            Communication, service standards, and food quality are mainly what Steelhead owners Joe and Gerardo thrive on. Their guests are rarely disappointed in service or food, and at STEELHEAD American Seafood & Steak we can expect the same. Hands-on approach to service, the team, and the guests experiences will keep STEELHEAD growing for years to come. 
+                        </p>
+                    </div>
+                    </div>
+                </div>
+           </div>
+            <div class="row row-content">
+                <div class="col-6">
+                    <div class="card bg-light mt-3">
+                        <div class="card-header bg-dark text-light">
+                        <h2 class= "text-center"><strong>Gerado</strong></h2>
+                        </div>
+                    <div class="card-body">
+                        <p class="border-bottom text-center">
+                            Gerardo is a well established concept General Manager in the Las Vegas and Miami areas. He has a tried and proven track record of achieving and maintaining finical stability and success. His teams in all his locations give him raving reviews. From his hands-on approach, connections with team members and guests, and love for amazing service are unrivaled. Gerado is bilingual and in fact an avid hunter and fishermen. Gerardo is extremely family oriented and treats his teams as family as well. He has success in restaurants across the Valley including Café Americano at Caesars grossing around 30 million dollars per year. 
+                        </p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card bg-light mt-3">
+                        <div class="card-header bg-dark text-light">
+                        <h2 class= "text-center"><strong>Chef Joe</strong></h2>
+                        </div>
+                    <div class="card-body">
+                        <p class="border-bottom text-center">
+                            Joe has an immense background in corporate restaurants including Landrys, Red Robin, and Outback. He has also managed much smaller boutique bars/restaurants in the Las Vegas Valley. More recently as Executive Chef for Bar Code Burger Bar; Chef Joe implemented Burgers of the Month, standards for the  teams and growth, and winning Las Vegas Weekly undercover Burger of the Year. Joe has worked for the Café Americano umbrella company for nearly 4 years, and in doing so formed a strong bond with Gerardo. Trained in traditional Italian through Chef Emery Childress, Joe brings a wide variety of techniques, cuisines, and structure to any kitchen in his possession. 
+                        </p>
+                    </div>
                     </div>
                 </div>
             </div>
