--- a/contactus.html
+++ b/contactus.html
@@ -2,18 +2,21 @@
 <html lang="en">
 
 <head>
-     <!-- meta with viewport for responsive design -->
+      <!-- meta with viewport for responsive design -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
  
      <!-- Bootstrap CSS -->
+     <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-     
+    <!-- stylesheet references for font awesome, google fonts, bootstrap-social, custom css-->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- endbuild -->
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Permanent+Marker&family=Rock+Salt&display=swap" rel="stylesheet">
 
     <title>Contact Us</title>
@@ -178,7 +181,7 @@
             </form>
         </div>
    </div>
-   
+
         <!-- footer -->
         <footer class = "site-footer border-top">
             <div class="row align-self-center">
